# p2p-chat

./: Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
client/: Cargo.toml
client/src/: constant.rs  errors.rs  lib.rs  main.rs
client/src/client/: instructions.rs  mod.rs  socket.rs
common/: Cargo.toml
common/src/: lib.rs  packets.rs  peer.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  peers.rs
