[workspace]
members = ["client", "server"]

[workspace.package]
name = "p2p-chat"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
nat-detect = { git = "https://github.com/dvorakchen/nat-detect.git" }
rand = "0.8.5"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt"] }
env_logger = "0.11.3"
log = "0.4.21"
dotenv = "0.15.0"
bytes = "1.6.0"
